[package]
name = "async-udx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = "1.11.0"
# async-io = "1.6.0"
bitflags = "1.3.2"
tokio = { version = "1.17.0", features = ["net", "macros", "rt-multi-thread", "time", "io-util", "sync"] }
futures = "0.3.21"
derivative = "2.2.0"
postage = "0.5.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
bytes = "1.1.0"
log = "0.4.16"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }


[[bench]]
name = "throughput"
harness = false

[features]
default = ["lock_tracking"]
lock_tracking = []
