[package]
name = "async-udx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = "1.11.0"
# async-io = "1.6.0"
bitflags = "1.3.2"
tokio = { version = "1.21.2", features = ["net", "macros", "rt-multi-thread", "time", "io-util", "sync"] }
futures = "0.3.25"
derivative = "2.2.0"
postage = "0.5.0"
tracing = "0.1.37"
bytes = "1.2.1"
log = "0.4.17"
udx-udp = { path = "./udx-udp" }
atomic-instant = "0.1.1"
quanta = "0.10.1"
parking_lot = "0.12.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
tracing-subscriber = "0.3.16"


[[bench]]
name = "throughput"
harness = false

[features]
# default = ["lock_tracking"]
default = []
lock_tracking = []

[workspace]
members = ["udx-udp", "secret-stream", "end-to-end"]
