[package]
name = "async-udx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust port of libudx, a protocol for reliable, multiplex, and congestion controlled streams over udp"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
documentation = "https://docs.rs/async-udx"
repository = "https://github.com/Frando/async-udx"
readme = "README.md"
keywords = ["udx", "p2p", "udp", "protocol"]
categories = [
  "asynchronous",
  "network-programming"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
tokio = { version = "1.21.2", features = ["net", "macros", "rt-multi-thread", "time", "io-util", "sync"] }
futures = "0.3.25"
derivative = "2.2.0"
tracing = "0.1.37"
bytes = "1.2.1"
log = "0.4.17"
udx-udp = { path = "./udx-udp" }
atomic-instant = "0.1.1"
parking_lot = "0.12.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
tracing-subscriber = "0.3.16"
pretty-bytes = "0.2.2"

[[bench]]
name = "throughput"
harness = false

[features]
default = []
lock_tracking = []

[workspace]
members = ["udx-udp", "end-to-end"]
